--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <a href="index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
-        <h1 class="sitename">Active.</h1>
+        <h1 class="sitename">Umroh Arminareka</h1>
       </a>
 
       <nav id="navmenu" class="navmenu">
@@ -116,28 +116,24 @@
               </script>
               <div class="swiper-wrapper">
                 <div class="swiper-slide">
-                  <img src="assets/img/img_h_6.jpg" alt="Image" class="img-fluid">
+                  <img src="assets/img/umroh1.png" alt="Image" class="img-fluid">
                 </div>
                 <div class="swiper-slide">
-                  <img src="assets/img/img_h_7.jpg" alt="Image" class="img-fluid">
+                  <img src="assets/img/testimonials/testimononi1.png" alt="Image" class="img-fluid">
                 </div>
                 <div class="swiper-slide">
-                  <img src="assets/img/img_h_8.jpg" alt="Image" class="img-fluid">
+                  <img src="assets/img/kabah2.png" alt="Image" class="img-fluid">
                 </div>
               </div>
               <div class="swiper-pagination"></div>
             </div>
           </div>
           <div class="col-lg-4 order-lg-1">
-            <span class="section-subtitle" data-aos="fade-up">Welcome</span>
+            <span class="section-subtitle" data-aos="fade-up">Selamat datang</span>
             <h1 class="mb-4" data-aos="fade-up">
-              Excepteur sint occaecat cupidatat non proident
-            </h1>
+              Layanan Umroh dan Haji Profesional untuk Anda            </h1>
             <p data-aos="fade-up">
-              Far far away, behind the word mountains, far from the countries
-              Vokalia and Consonantia, there live the blind texts. Separated they
-              live in Bookmarksgrove right at the coast of the Semantics, a large
-              language ocean.
+              Kami hadir untuk menjadi sahabat Anda dalam perjalanan suci menuju Tanah Suci. Dengan pelayanan profesional yang didukung oleh semangat kekeluargaan, kami berkomitmen memberikan pengalaman ibadah yang nyaman, aman, dan berkesan. Mari bersama-sama mewujudkan niat suci Anda dengan penuh keberkahan.
             </p>
             <p class="mt-5" data-aos="fade-up">
               <a href="#" class="btn btn-get-started">Get Started</a>
@@ -156,25 +152,21 @@
             <div class="col-sm-12 col-md-5 col-lg-4 col-xl-4 order-lg-2 offset-xl-1 mb-4">
               <div class="img-wrap text-center text-md-left" data-aos="fade-up" data-aos-delay="100">
                 <div class="img">
-                  <img src="assets/img/img_v_3.jpg" alt="circle image" class="img-fluid">
+                  <img src="assets/img/kabah1.png" alt="circle image" class="img-fluid">
                 </div>
               </div>
             </div>
 
             <div class="offset-md-0 offset-lg-1 col-sm-12 col-md-5 col-lg-5 col-xl-4" data-aos="fade-up">
               <div class="px-3">
-                <span class="content-subtitle">Our Mission</span>
+                <span class="content-subtitle">Misi Kami</span>
                 <h2 class="content-title text-start">
-                  The Big Oxmox advised her not to do so, because there were
-                  thousands.
+                  Antara Anda dan Baitullah
                 </h2>
                 <p class="lead">
-                  A small river named Duden flows by their place and supplies it
-                  with the necessary regelialia. It is a paradisematic country.
-                </p>
+                  Kami berkomitmen menjadi pendamping terpercaya dalam perjalanan suci Anda. Dengan pelayanan yang profesional dan sepenuh hati, kami memastikan setiap langkah ibadah Anda berlangsung nyaman, aman, dan penuh keberkahan.               </p>
                 <p class="mb-5">
-                  The Big Oxmox advised her not to do so, because there were
-                  thousands of bad Commas, wild Question Marks and devious Semikoli.
+                  Bagi kami, perjalanan ini bukan sekadar perjalanan fisik, tetapi juga perjalanan spiritual yang mendalam. Dengan dedikasi dan perhatian penuh, kami hadir untuk memudahkan dan mewujudkan niat suci Anda menuju Tanah Suci.
                 </p>
                 <p>
                   <a href="#" class="btn-get-started">Get Started</a>
@@ -198,8 +190,8 @@
                 <i class="bi bi-bullseye"></i>
               </div>
               <div>
-                <h3>Technology</h3>
-                <p>Separated they live in Bookmarksgrove right at the coast</p>
+                <h3>Paket Umroh & Haji</h3>
+                <p>Kami menawarkan berbagai paket perjalanan Umroh dan Haji, dengan layanan penuh kenyamanan.</p>
               </div>
             </div>
           </div>
@@ -210,8 +202,8 @@
                 <i class="bi bi-command"></i>
               </div>
               <div>
-                <h3>Web Design</h3>
-                <p>Separated they live in Bookmarksgrove right at the coast</p>
+                <h3>Akomodasi & Transportasi</h3>
+                <p>Hotel berbintang dan transportasi terbaik untuk mendukung kenyamanan Anda selama perjalanan ibadah.</p>
               </div>
             </div>
           </div>
@@ -222,8 +214,20 @@
                 <i class="bi bi-bar-chart"></i>
               </div>
               <div>
-                <h3>Branding</h3>
-                <p>Separated they live in Bookmarksgrove right at the coast</p>
+                <h3>Bimbingan Ibadah</h3>
+                <p>Didampingi oleh ustadz berpengalaman untuk memastikan ibadah Anda berjalan sesuai tuntunan agama.</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3">
+            <div class="services-item" data-aos="fade-up" data-aos-delay="200">
+              <div class="services-icon">
+                <i class="bi bi-bar-chart"></i>
+              </div>
+              <div>
+                <h3>Dokumen & Visa</h3>
+                <p>Kami mengurus semua persiapan perjalanan Anda, termasuk visa, tiket pesawat, dan dokumen lainnya.</p>
               </div>
             </div>
           </div>
@@ -241,41 +245,47 @@
 
           <div class="col-lg-5">
             <div class="images-overlap">
-              <img src="assets/img/img_v_1.jpg" alt="student" class="img-fluid img-1" data-aos="fade-up">
+              <img src="assets/img/arminarekawhyus1.png" alt="student" class="img-fluid img-1" data-aos="fade-up">
             </div>
           </div>
 
           <div class="col-lg-4 ps-lg-5">
-            <span class="content-subtitle">Why Us</span>
-            <h2 class="content-title">Far far away Behind the Word Mountains</h2>
-            <p class="lead">
-              Far far away, behind the word mountains, far from the countries
-              Vokalia and Consonantia.
-            </p>
-            <p class="mb-5">
-              There live the blind texts. Separated they live in Bookmarksgrove
-              right at the coast of the Semantics, a large language ocean.
-            </p>
+            <span class="content-subtitle">Kenapa Memilih Kami</span>
+            <h2 class="content-title">Mitra Ibadah Terpercaya Menuju Tanah Suci</h2>
+              <p class="lead">
+                <strong>Berpengalaman:</strong> Ribuan jamaah telah mempercayakan perjalanan mereka kepada kami.
+              </p>
+              <p class="lead">
+                <strong>Profesional & Tulus:</strong> Layanan terbaik dengan semangat melayani sepenuh hati.
+              </p>
+              <p class="lead">
+                <strong>Fasilitas Nyaman:</strong> Akomodasi dan transportasi yang mendukung kenyamanan Anda.
+              </p>
+              <p class="lead">
+                <strong>Bimbingan Spiritual:</strong> Pendampingan ibadah dari awal hingga akhir perjalanan.
+              </p>
+              <p class="mb-5">
+                Percayakan perjalanan suci Anda kepada kami untuk pengalaman ibadah yang lancar, aman, dan penuh berkah.              </p>
             <div class="row mb-5 count-numbers">
 
               <!-- Start Stats Item -->
               <div class="col-4 counter" data-aos="fade-up" data-aos-delay="100">
-                <span data-purecounter-separator="true" data-purecounter-start="0" data-purecounter-end="3919" data-purecounter-duration="1" class="purecounter number"></span>
-                <span class="d-block">Coffee</span>
+                <span data-purecounter-separator="true" data-purecounter-start="0" data-purecounter-end="50000" data-purecounter-duration="1" class="purecounter number"></span>
+                <span class="d-block">Jamaah Dilayani/Tahun</span>
               </div>
               <!-- End Stats Item -->
 
               <!-- Start Stats Item -->
               <div class="col-4 counter" data-aos="fade-up" data-aos-delay="200">
-                <span data-purecounter-separator="true" data-purecounter-start="0" data-purecounter-end="2831" data-purecounter-duration="1" class="purecounter number"></span>
-                <span class="d-block">Codes</span>
+                <span data-purecounter-separator="true" data-purecounter-start="0" data-purecounter-end="1000" data-purecounter-duration="1" class="purecounter number"></span>
+                <span class="d-block">Jamaah Haji Plus/Tahun</span>
               </div>
               <!-- End Stats Item -->
 
               <!-- Start Stats Item -->
               <div class="col-4 counter" data-aos="fade-up" data-aos-delay="300">
-                <span data-purecounter-separator="true" data-purecounter-start="0" data-purecounter-end="1914" data-purecounter-duration="1" class="purecounter number"></span>
-                <span class="d-block">Projects</span>
+                <span data-purecounter-separator="true" data-purecounter-start="0" data-purecounter-end="3" data-purecounter-duration="1" class="purecounter number"></span>
+                <span class="d-block">Tahun Pengalaman</span>
               </div>
               <!-- End Stats Item -->
 
