--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
               </script>
               <div class="swiper-wrapper">
                 <div class="swiper-slide">
-                  <img src="assets/img/img_h_1.jpg" alt="Image" class="img-fluid">
+                  <img src="assets/img/galleryumroh.png" alt="Image" class="img-fluid" width="1000" height="700" style="object-fit: contain;">
                   <!-- <div class="p-4">
                     <h3 class="text-black h5 mb-3">Modern and clean design</h3>
                     <div class="row">
