--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                   <img src="assets/img/testimonials/testimononi1.png" alt="Image" class="img-fluid">
                 </div>
                 <div class="swiper-slide">
-                  <img src="assets/img/kabah2.png" alt="Image" class="img-fluid">
+                  <img src="assets/img/headkolase2.png" alt="Image" class="img-fluid">
                 </div>
               </div>
               <div class="swiper-pagination"></div>
