--- a/index.html
+++ b/index.html
@@ -1012,12 +1012,14 @@
                           class="img-fluid"
                         />
                       </figure>
-                      <h3 class="name">Adam Aderson</h3>
+                      <h3 class="name">Sri Utami</h3>
                       <blockquote>
                         <p>
-                          “There live the blind texts. Separated they live in
-                          Bookmarksgrove right at the coast of the Semantics, a
-                          large language ocean.”
+                          “Masih merasakan kesedihan hrs berpisah dgn kalian semua di grup ini...serasa baru kemarin datang ke baitullah msh merasakan ibadah yg paling nikmat sekali dirasakan...semoga kita bisa bertemu kembali di tanah suci bersama keluarga besar suami, anak, cucu mantu mohon maaf lahir dan batin apabila ada
+                          kesalahan dim perkataan maupun
+                          perbuatan...semoga kita dpt bergandengan tangan lagi seperti tawaf di Ka'bah CU CU
+                          mksh mba Eta dan mba Yanti utk kebersamaan
+                          kita selama 9 hari di baitullah.”
                         </p>
                       </blockquote>
                     </div>
@@ -1031,12 +1033,15 @@
                           class="img-fluid"
                         />
                       </figure>
-                      <h3 class="name">Lukas Devlin</h3>
+                      <h3 class="name">Febrary - Neta</h3>
                       <blockquote>
                         <p>
-                          “There live the blind texts. Separated they live in
-                          Bookmarksgrove right at the coast of the Semantics, a
-                          large language ocean.”
+                          “Mhn maaf lahir batin kon semua jamaah, mungkin ada kata2 atau perbuatan sy yg salah
+                          Terima kasih atas kebersamaannya yg begitu
+                          singkat ini, tp sangat berkesan. Semoga semua sehat2 selalu dan kita dpt dipertemukan kembali dim keadaan yg lebih baik.
+                          InsyaAllah umroh ini bisa jd titik start resolusi menjadi pribadi yg lebih baik, aamiin YRA
+                          *terutama utk diri kami yg baru pertama kali umroh
+                          -Febrary - Neta-.”
                         </p>
                       </blockquote>
                     </div>
@@ -1050,12 +1055,17 @@
                           class="img-fluid"
                         />
                       </figure>
-                      <h3 class="name">Kayla Bryant</h3>
+                      <h3 class="name">Dicky</h3>
                       <blockquote>
                         <p>
-                          “There live the blind texts. Separated they live in
-                          Bookmarksgrove right at the coast of the Semantics, a
-                          large language ocean.”
+                          “Assalamualaikum
+                          Alhamdulillah saya dan keluarga sudah sampai di boyolali, di kota kelahiran.
+                          Saya dicky, mewakili keluarga.
+                          Mengucapkan terima kasih sebanyak-banyak
+                          kepada Ustad Rofiq, Tim Leader Armena @Eta TI 17 @Yanti Hermawati .
+                          Dan tentunya kepada Bapak, Ibu, Mas dan Mbak Jamaah 83.
+                          Terima kasih sebanyak banyak2nya atas kebaikan dan pertolongannya selama melaksanakan ibadah umroh.
+                          Dan semoga tali persaudaraan ini tidak putus sampai disini dan akan terus menjadi sodara yang entah kapan semoga bisa di pertemukan kembali di Tanah Suci .Amiin.”
                         </p>
                       </blockquote>
                     </div>
