--- a/index.html
+++ b/index.html
@@ -1085,11 +1085,9 @@
         <div class="row g-4">
           <div class="col-md-6 col-lg-3 mb-3 mb-md-0">
             <div class="widget">
-              <h3 class="widget-heading">About Us</h3>
+              <h3 class="widget-heading">Tentang Kami</h3>
               <p class="mb-4">
-                There live the blind texts. Separated they live in
-                Bookmarksgrove right at the coast of the Semantics, a large
-                language ocean.
+                Kami adalah mitra terpercaya Anda dalam perjalanan suci menuju Tanah Suci. Dengan layanan Umroh dan Haji yang profesional. Mari wujudkan niat suci Anda bersama kami.
               </p>
               <p class="mb-0">
                 <a href="#" class="btn-learn-more">Learn more</a>
@@ -1184,7 +1182,7 @@
         >
           <p>
             © <span>Copyright</span>
-            <strong class="px-1 sitename">Active.</strong>
+            <strong class="px-1 sitename">Umroh Arminareka</strong>
             <span>All Rights Reserved</span>
           </p>
           <div class="credits">
