--- a/index.html
+++ b/index.html
@@ -485,10 +485,10 @@
                       <i class="bi bi-passport"></i>
                     </div>
                     <div>
-                      <h3>Dokumen & Visa</h3>
+                      <h3>Dokumen</h3>
                       <p>
                         Kami mengurus semua persiapan perjalanan Anda, termasuk
-                        visa, tiket pesawat, dan dokumen lainnya.
+                        tiket pesawat, dan dokumen lainnya.
                       </p>
                     </div>
                   </div>
